--- a/monamedia/monamedia/monamedia/Areas/Staff/Views/Shared/StaffLayoutPage1.cshtml
+++ b/monamedia/monamedia/monamedia/Areas/Staff/Views/Shared/StaffLayoutPage1.cshtml
@@ -54,8 +54,8 @@
         }
 
         .container {
-            margin-left: 220px;
-            width: calc(100% - 220px);
+            margin-left: 200px;
+            width: calc(100% - 200px);
             padding: 20px;
         }
     </style>
@@ -64,7 +64,6 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <span style="color : white">Xin chào tên nhân viên</span>
         <ul style="margin-top:20px">
             <li>
                 <a href="https://localhost:44347/Staff/SHome/AllProduct">
@@ -81,7 +80,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://localhost:44347/Staff/SDelivery/AllDelivery">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck icon" viewBox="0 0 16 16">
                         <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
                     </svg>Giao hàng
@@ -102,7 +101,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://localhost:44347/AdminStaff/LoginForm" id="logout-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left icon" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z" />
                         <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z" />
@@ -113,12 +112,27 @@
     </div>
 
     <!-- Main content -->
-    <div class="container body-content" style="margin-left: 200px;">
+    <div class="container body-content">
         @RenderBody()
         <footer>
         </footer>
     </div>
     @RenderSection("Scripts", required: false)
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script>
+        document.getElementById("logout-link").addEventListener("click", function (e) {
+            fetch("/AdminStaff/Logout", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                }
+            })
+                .then(response => {
+              
+                })
+                .catch(error => {
+                });
+        });
+    </script>
 </body>
 </html>
