--- a/monamedia/monamedia/monamedia/Areas/Admin/Views/Shared/AdminLayoutPage1.cshtml
+++ b/monamedia/monamedia/monamedia/Areas/Admin/Views/Shared/AdminLayoutPage1.cshtml
@@ -14,29 +14,33 @@
             line-height: 1.5;
             background-color: rgb(245,245,245);
         }
+
         .header {
             height: 50px;
             background-color: rgb(24,42,170);
             display: flex;
             position: fixed;
             left: 0;
-            right:0;
+            right: 0;
             top: 0;
             width: 100%;
             padding-left: 150px;
-            padding-right:150px;
+            padding-right: 150px;
             justify-content: flex-end;
         }
+
         header ul {
             list-style-type: none;
         }
+
             header ul li a svg {
                 background-color: rgb(255, 212, 59);
                 color: rgb(0, 28, 64);
-             display:block;
-             margin:0;
-             padding: 15px;
+                display: block;
+                margin: 0;
+                padding: 15px;
             }
+
         .sidebar {
             background-color: rgb(24,42,170);
             color: white;
@@ -47,6 +51,7 @@
             left: 0;
             padding-top: 20px;
         }
+
         .sidebar__menu {
             padding: 15px;
             list-style: none;
@@ -60,7 +65,6 @@
                 text-align: center;
                 position: relative;
                 line-height: 30px;
-                
             }
 
                 .sidebar__menu li a {
@@ -71,16 +75,17 @@
                     padding: 6px 8px;
                     transition: 0.3s;
                 }
+
                     .sidebar__menu li a:hover {
                         background-color: rgb(188,206,251);
                         color: rgb(24,42,170);
-                        border-radius: 10px; 
-                        
+                        border-radius: 10px;
                     }
-                   
+
         .sidebar ul li a svg {
             margin-right: 10px;
         }
+
         .main_title {
             margin-top: 60px;
             margin-left: 30px;
@@ -107,6 +112,7 @@
             align-items: center;
             margin-left: 10px;
         }
+
         .col-md-12 {
             background-color: white;
             display: block;
@@ -136,6 +142,7 @@
             margin-bottom: 30px;
             transition: all 0.3s ease-in-out;
         }
+
         #clock {
             text-align: center;
             float: right;
@@ -147,7 +154,6 @@
             display: inline-block;
             align-items: center;
         }
-       
     </style>
 </head>
 <body onload="time()">
@@ -184,11 +190,11 @@
                         <path d="M0 1.5A1.5 1.5 0 0 1 1.5 0h13A1.5 1.5 0 0 1 16 1.5v2A1.5 1.5 0 0 1 14.5 5h-13A1.5 1.5 0 0 1 0 3.5zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5z" />
                         <path d="M2 2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m10.823.323-.396-.396A.25.25 0 0 1 12.604 2h.792a.25.25 0 0 1 .177.427l-.396.396a.25.25 0 0 1-.354 0M0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5" />
                     </svg>
-                    <span class="app-menu__label">Bảng điều khiển</span>
+                    <span class="app-menu__label">Thông tin cá nhân</span>
                 </a>
             </li>
             <li>
-                <a class="sidebar__menu__manage" href="#">
+                <a class="sidebar__menu__manage" href="~/Admin/AHome/AccountManage">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
                         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
@@ -225,15 +231,7 @@
                     </svg><span class="app-menu__label">Thống kê doanh thu </span>
                 </a>
             </li>
-            <li>
-                <a class="sidebar__menu__manage" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-coin" viewBox="0 0 16 16">
-                        <path d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518z" />
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                        <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11m0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12" />
-                    </svg> <span class="app-menu__label">Bảng kê lương</span>
-                </a>
-            </li>
+      
 
         </ul>
     </aside>
@@ -249,7 +247,7 @@
     </div>
     @RenderSection("Scripts", required: false)
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts\jquery-3.5.0.min.js"></script>
+    <script src="~/Scripts\jquery-3.7.1.min.js"></script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
@@ -293,7 +291,7 @@
             });
         });
     </script>
- 
+
     <script>
         function time() {
             var today = new Date();
