--- a/monamedia/monamedia/monamedia/Areas/Admin/Views/AHome/Index.cshtml
+++ b/monamedia/monamedia/monamedia/Areas/Admin/Views/AHome/Index.cshtml
@@ -87,7 +87,7 @@
                                 <i class="fas fa-plus"></i>
                                 Tạo mới nhân viên
                             </a>
-                            <a id="deleteSelected" class="btn btn-delete" type="button" title="Xóa" >
+                            <a id="deleteSelected" class="btn btn-delete" type="button" title="Xóa">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                     <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
                                 </svg> <i class="fas fa-trash-alt"></i> Xóa tất cả
@@ -127,7 +127,7 @@
                                     <td>@staff.staffID</td>
                                     <td>@staff.accountID</td>
                                     <td>@staff.fullName</td>
-                                    <td>@staff.birthDate</td>
+                                    <td>@staff.birthDate.Value.ToString("dd-MM-yyyy")</td>
                                     <td>
                                         @if (staff.gender == true)
                                         {
@@ -143,7 +143,7 @@
                                     <td>@staff.salary</td>
                                     <td class="table-td-center">
                                         <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                                                data-toggle="modal" data-target="#ModalUP" style="background-color: rgb(251, 226, 197); ">
+                                                style="background-color: rgb(251, 226, 197); ">
                                             <a href="~/Admin/AHome/EditStaff?idStaff=@staff.staffID&idAccount=@staff.accountID">
 
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -153,8 +153,8 @@
                                                 <i class="fas fa-edit"></i>
                                             </a>
                                         </button>
-                                        <button  class="btn btn-primary btn-sm trash" type="button" title="Xóa" style="background-color: rgb(247, 195, 194);">
-                                            <a  onclick="toggleCheckbox(this)">
+                                        <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" style="background-color: rgb(247, 195, 194);">
+                                            <a onclick="toggleCheckbox(this)">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                                     <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
                                                 </svg>
