--- a/monamedia/monamedia/monamedia/Views/AdminStaff/loginform.cshtml
+++ b/monamedia/monamedia/monamedia/Views/AdminStaff/loginform.cshtml
@@ -187,7 +187,8 @@
                                 if (response.role === "Staff") {
                                     window.location.href = '/Staff/SHome/AllProduct';
                                 } else if (response.role === "Admin") {
-                                    window.location.href = '/Admin/Index';
+                                  //  window.location.href = '/Admin/AHome/Index';
+                                   window.location.href = '/Admin/AHome/Information';
                                 }
                             }, 1000);
                         } else {
