--- a/monamedia/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
+++ b/monamedia/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
@@ -12,6 +12,7 @@
             text-align: center;
             margin-bottom: 20px;
         }
+
         .product-info {
             display: flex;
             align-items: center;
@@ -47,16 +48,18 @@
         .add-product-btn {
             margin-left: 10px;
         }
+
         .card-container {
             border-radius: 10px;
             overflow: hidden;
             border: 2px solid #ced4da;
             background: linear-gradient(to right, #81c3d7, #e0e5ef);
         }
-        .card-text,.card-title
-        {
-            margin-left:10px;
+
+        .card-text, .card-title {
+            margin-left: 10px;
         }
+
         .custom-alert {
             position: fixed;
             top: 50%;
@@ -70,14 +73,16 @@
             font-weight: bold; /* This line makes the text bold */
             display: none;
         }
-        .name-staff{
-            border:2px solid #ccc;
-            border-radius:10px;
-            width:200px;
-            height:50px;
+
+        .name-staff {
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            width: 200px;
+            height: 50px;
         }
-}
     </style>
+}   
+
     <h2>Danh sách sản phẩm</h2>
     <div class="row mb-3">
         <div class="col-md-6">
