--- a/monamedia/monamedia/monamedia/Areas/Staff/Views/Shared/StaffLayoutPage1.cshtml
+++ b/monamedia/monamedia/monamedia/Areas/Staff/Views/Shared/StaffLayoutPage1.cshtml
@@ -12,6 +12,13 @@
             overflow-x: hidden;
         }
 
+        .main-content {
+            margin-left: 200px;
+            width: calc(100% - 200px);
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+        }
+
         .sidebar {
             width: 200px;
             height: 100%;
@@ -52,12 +59,6 @@
         .icon {
             margin-left: 25px;
         }
-
-        .container {
-            margin-left: 200px;
-            width: calc(100% - 200px);
-            padding: 20px;
-        }
     </style>
 </head>
 <body>
@@ -94,7 +95,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://localhost:44347/Staff/SAccount/AccountInfo">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill icon" viewBox="0 0 16 16">
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                     </svg>Tài khoản
@@ -112,11 +113,11 @@
     </div>
 
     <!-- Main content -->
-    <div class="container body-content">
+    <div class="main-content">
         @RenderBody()
         <footer>
         </footer>
-    </div>
+    </div>  
     @RenderSection("Scripts", required: false)
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script>
