--- a/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
+++ b/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
@@ -189,7 +189,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="modalProductQuantity"><strong>Số lượng</strong></label>
-                                <input type="text" class="form-control" id="modalProductQuantity">
+                                <input type="text" class="form-control" id="modalProductQuantity" readonly>
                             </div>
                         </div>
                     </div>
