--- a/monamedia/monamedia/Areas/Staff/Views/SDelivery/AllDelivered.cshtml
+++ b/monamedia/monamedia/Areas/Staff/Views/SDelivery/AllDelivered.cshtml
@@ -303,8 +303,10 @@
                     productListHTML += '<div class="row mb-3">';
                     productListHTML += '<div class="col"><span>Hình ảnh</span></div>';
                     productListHTML += '<div class="col"><span>Tên sản phẩm</span></div>';
+                    productListHTML += '<div class="col"><span>Màu</span></div>';
+                    productListHTML += '<div class="col"><span>Giá sản phẩm</span></div>';
                     productListHTML += '<div class="col"><span>Số lượng</span></div>';
-                    productListHTML += '<div class="col"><span>Giá tiền</span></div>';
+                    productListHTML += '<div class="col"><span>Tổng tiền</span></div>';
                     productListHTML += '</div>';
                     productListHTML += '<div class="table-container">';
                     $.each(data, function (index, item) {
@@ -316,16 +318,20 @@
                         productListHTML += item.ProductName;
                         productListHTML += '</div>';
                         productListHTML += '<div class="col">';
+                        productListHTML += item.ProductColor;
+                        productListHTML += '</div>';
+                        productListHTML += '<div class="col">';
+                        productListHTML += parseFloat(item.UnitPrice).toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
+                        productListHTML += '</div>';
+                        productListHTML += '<div class="col">';
                         productListHTML += item.Quantity;
                         productListHTML += '</div>';
                         productListHTML += '<div class="col">';
-                        productListHTML += parseFloat(item.Price).toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });;
+                        productListHTML += parseFloat(item.Price).toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
                         productListHTML += '</div>';
                         productListHTML += '</div>';
-
                     });
                     productListHTML += '</div>';
-
 
                     orderDetailsList.html(productListHTML);
                 },
