--- a/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
+++ b/monamedia/monamedia/Areas/Staff/Views/SHome/AllProduct.cshtml
@@ -197,7 +197,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="modalProductPrice"><strong>Giá</strong></label>
-                                <input type="text" class="form-control" id="modalProductPrice">
+                                <input type="text" class="form-control" id="modalProductPrice" readonly>
                             </div>
                         </div>
                     </div>
