--- a/monamedia/monamedia/Areas/Admin/Views/AHome/AllExport.cshtml
+++ b/monamedia/monamedia/Areas/Admin/Views/AHome/AllExport.cshtml
@@ -94,7 +94,7 @@
     </style>
 }
 @model List<monamedia.ViewModels.OrderViewModel>
-<h2>Danh sách đơn hàng đã giao</h2>
+<h2>Danh sách xuất kho</h2>
 <div id="orderContainer" class="container-fluid">
     <div class="row mb-3">
         <div class="col-md-6">
