--- a/monamedia/monamedia/Areas/Admin/Views/Shared/AdminLayoutPage1.cshtml
+++ b/monamedia/monamedia/Areas/Admin/Views/Shared/AdminLayoutPage1.cshtml
@@ -209,7 +209,7 @@
                 </a>
             </li>
             <li>
-                <a class="sidebar__menu__manage" href="#">
+                <a class="sidebar__menu__manage" href="~/Admin/AHome/Import">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5" />
                         <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z" />
@@ -285,31 +285,7 @@
                 });
         });
     </script>
-    <script>
-        $(document).ready(function () {
-            $('#deleteSelected').click(function () {
-                var selectedStaffIds = [];
-                var selectedAccountIDs = [];
-                $('.rowCheckbox:checked').each(function () {
-                    var staffID = $(this).closest('tr').data('staffid'); // Lấy staffID của nhân viên từ dòng chứa checkbox được chọn
-                    selectedStaffIds.push(staffID);
-                    var accountID = $(this).closest('tr').data('accountid');
-                    selectedAccountIDs.push(accountID);
-                });
-
-                if (selectedStaffIds.length > 0 && selectedAccountIDs.length > 0) {
-                    // Hiển thị hộp thoại xác nhận
-                    if (confirm('Bạn có chắc chắn muốn xóa nhân viên này không?')) {
-                        // Nếu người dùng chọn "OK" trong hộp thoại xác nhận, chuyển hướng đến trang DeleteStaff và truyền danh sách ID
-                        window.location.href = '/Admin/AHome/DeleteStaff?selectedStaffIDs=' + selectedStaffIds.join(',') + '&selectedAccountIDs=' + selectedAccountIDs.join(',');
-                    }
-                } else {
-                    // Nếu không có nhân viên nào được chọn, thông báo cho người dùng
-                    alert('Vui lòng chọn ít nhất một nhân viên để xóa.');
-                }
-            });
-        });
-    </script>
+   
 
     <script>
         function time() {
