--- a/monamedia/monamedia/Areas/Admin/Views/AHome/Revenue.cshtml
+++ b/monamedia/monamedia/Areas/Admin/Views/AHome/Revenue.cshtml
@@ -1,8 +1,12 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Revenue";
     Layout = "~/Areas/Admin/Views/Shared/AdminLayoutPage1.cshtml";
 }
+@model List<int>
+<head>
+    <!-- Thêm Chart.js từ CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
 <style>
     .row_element-button {
         display: flex;
@@ -14,23 +18,27 @@
         text-size-adjust: 100%;
         justify-content: space-between;
     }
+
     .widget-small {
         display: flex;
         background-color: white;
         padding: 10px;
         border-radius: .375rem;
     }
+
     .icon {
         border-radius: .375rem;
-        width:60px;
-        height:72px
+        width: 60px;
+        height: 72px;
     }
-    .icon svg{
-        color:white;
-    }
-    .info{
-        padding-left:20px;
-        color:red;
+
+        .icon svg {
+            color: white;
+        }
+
+    .info {
+        padding-left: 20px;
+        color: red;
     }
 </style>
 <main class="main">
@@ -38,17 +46,17 @@
         <p class="main_title-label "><b>Thống kê doanh thu</b></p>
         <div id="clock"></div>
     </div>
-    <div class="row" style="margin-left:20px;padding-bottom:20px">
+    <div class="row" style="margin-left: 20px; padding-bottom: 20px;">
         <div class="col-md-6 col-lg-3">
             <div class="widget-small primary coloured-icon">
                 <div class="icon" style="background-color: rgb(249, 186, 186);">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-person-fill"viewBox="-2 -2 20 16" >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-person-fill" viewBox="-2 -2 20 16">
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                     </svg>
                 </div>
                 <div class="info">
                     <h4>Tổng Nhân viên</h4>
-                    <p style="color:black;"><b>26 nhân viên</b></p>
+                    <p style="color: black;"><b> @ViewBag.Stafftotal nhân viên</b></p>
                 </div>
             </div>
         </div>
@@ -61,7 +69,7 @@
                 </div>
                 <div class="info">
                     <h4>Tổng sản phẩm</h4>
-                    <p style="color:black;"><b>26 sản phẩm</b></p>
+                    <p style="color: black;"><b>@ViewBag.Producttotal sản phẩm</b></p>
                 </div>
             </div>
         </div>
@@ -74,7 +82,7 @@
                 </div>
                 <div class="info">
                     <h4>Tổng đơn hàng</h4>
-                    <p style="color:black;"><b>26 đơn hàng</b></p>
+                    <p style="color: black;"><b>@ViewBag.Ordertotal đơn hàng</b></p>
                 </div>
             </div>
         </div>
@@ -87,7 +95,7 @@
                 </div>
                 <div class="info">
                     <h4>Tổng doanh thu</h4>
-                    <p style="color:black;"><b>26</b></p>
+                    <p style="color: black;"><b>@ViewBag.TotalRevenue đồng</b></p>
                 </div>
             </div>
         </div>
@@ -96,11 +104,43 @@
         <div class="col-md-12">
             <div class="title">
                 <div class="row_element-button">
-                   //main
+                    <canvas id="myChart" width="800" height="400"></canvas>
                 </div>
-
             </div>
         </div>
     </div>
 </main>
+<
+<script>
+        // Hàm JavaScript chart nhận giá trị doanhThu và vẽ biểu đồ
+        function chart(doanhThu) {
+            var labels = ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', 'Tháng 7', 'Tháng 8', 'Tháng 9', 'Tháng 10', 'Tháng 11', 'Tháng 12'];
 
+            // Tạo biểu đồ
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: 'Doanh thu theo tháng',
+                        data: doanhThu,
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true 
+                            }
+                        }]
+                    }
+                }
+            });
+        }
+        // Gọi hàm chart với giá trị doanhThu từ Model
+        chart(@Html.Raw(Json.Encode(Model)));
+</script>
